examples/test/testpolicy16776.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16776
  namespace: namespace321
spec:
  podSelector:
    matchLabels:
      key0: value4
      key22: value27
      key24: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value26
          key4: value49
          key42: value40
      podSelector:
        matchLabels:
          key8: value15
          key13: value17
